slightly nicer but not done

--- a/guessinggame.html
+++ b/guessinggame.html
@@ -16,21 +16,23 @@
       <label for="number">Guess a Number between One and One Hundred</label>
       <input type="text" id="number">
     </form>
+    <div class="submit">
+      <form>
+        <label for="submit">Submit Guess:</label>
+        <input type="button" id="submit">
+      </form>
+    </div>
   </div>
   <div class="left">
     <p>You have n guesses left</p>
   </div>
   <div class="resetGame">
     <form>
-      <label for="reset">Reset the Game</label>
+      <label for="reset">Reset the Game:</label>
       <input type="button" id="reset">
     </form>
   </div>
 </html>
 
 <!--
-1) change top to pale crimson
-2) change bottom to pale green
-3) organize bottom shit: reset small bottom left, other
-  two in the middle, spaced, etc.
 -->
