keeps track of the number of guesses; will respond appropriately to duplicate or winning guesses

--- a/guessinggame.html
+++ b/guessinggame.html
@@ -21,12 +21,12 @@
     <div class="submit">
       <form>
         <label for="submit">Submit Guess:</label>
-        <input type="button" onclick='playersGuessSubmission()' id="submit">
+        <input type="button" onclick='playerGuessSubmission()' id="submit">
       </form>
     </div>
   </div>
   <div class="left">
-    <p>You have n guesses left</p>
+    <p>You have 10 guesses left</p>
   </div>
   <div class="resetGame">
     <form>
