Added a hint button that is hooked up to the provideHint() function

--- a/guessinggame.html
+++ b/guessinggame.html
@@ -35,4 +35,11 @@
       <input type="button" id="reset">
     </form>
   </div>
+  <div class="hint">
+    <form>
+      <input type="button" onclick='provideHint()' id="hint">
+      <label for="hint">Give me a hint!</label>
+    </form>
+  </div>
+  <p class="hintText">Here is your hint</p>
 </html>
