If there are very few guesses remaining, the hint button tells the player the tens digit

--- a/guessinggame.html
+++ b/guessinggame.html
@@ -41,5 +41,5 @@
       <label for="hint">Give me a hint!</label>
     </form>
   </div>
-  <p class="hintText">Here is your hint</p>
+  <p id="hintText">Here is your hint</p>
 </html>
