reset works; game-over functions outlined

--- a/guessinggame.html
+++ b/guessinggame.html
@@ -32,7 +32,7 @@
   <div class="resetGame">
     <form>
       <label for="reset">Reset the Game:</label>
-      <input type="button" id="reset">
+      <input type="button" onclick='playAgain()' id="reset">
     </form>
   </div>
   <div class="hint">
